# FinalProject_Python2_Hillel

./: Makefile  README.md  config.py  dao.py  database.py  main.py  pyproject.toml  schemas.py
api_router/: api_trips.py  api_users.py  schemas_trips.py  schemas_users.py
background_tasks/: confirm_registration.py
templates/: base.html  details.html  index.html  navbar.html  registration.html  welcome_letter.html
utils/: email_sender.py
web_router/: web.py
